# frontend-components

./: .gitignore  Cargo.toml  README.md
examples/webpage/: Cargo.toml  README.md  build.rs  index.html
examples/webpage/src/: app.rs  main.rs  routes.rs
examples/webpage/src/components/: carousel.rs  dropdown.rs  expandable_container.rs  file_search.rs  filter.rs  mod.rs  multi_select.rs  popups.rs  select.rs
scss/: main.scss
scss/base/: _typography.scss
scss/components/: _basic.scss  _carousel.scss  _expandable_container.scss  _file_search.scss  _label.scss  _multi_selection.scss  _navbar.scss  _popup.scss  _popup_book_search.scss  _popup_comparison.scss  _poster.scss  _vertical_list.scss
scss/layout/: _form.scss  _sidebar.scss  _sizes.scss
scss/pages/: _author_list.scss  _book_list.scss  _item_view.scss
src/: api.rs  lib.rs  multi_select.rs  popup.rs  upload.rs  util.rs
src/api/: librarian.rs  mod.rs  reader.rs
src/component/: carousel.rs  expandable_container.rs  expanding_text.rs  file_search.rs  filter.rs  infinite_scroll.rs  mod.rs  multi_select.rs  popup.rs  select.rs  upload.rs
src/component/popup/: button.rs  compare.rs  search.rs
src/ext/: validate.rs
src/popup/: button.rs  compare.rs  search.rs
src/specific/: id.rs  image.rs  isbn.rs  language.rs  mod.rs  source.rs
