[package]
name = "frontend-component"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = { version = "0.2", features = ["futures"] }
gloo-timers = { version = "0.2", features = ["futures"] }
gloo-utils = "0.1"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
	"DataTransfer",
	"DomTokenList",
	"RequestInit",
]