[workspace]
members = [
	"examples/*"
]

[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
frontend = ["gloo-file", "gloo-timers", "gloo-utils", "wasm-bindgen", "wasm-bindgen-futures", "web-sys", "yew", "yew-hooks", "chrono/wasmbind"]
backend = ["rusqlite"]


[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4"

# Backend
rusqlite = { version = "0.28", optional = true }


# Frontend
gloo-file = { version = "0.2", features = ["futures"], optional = true }
gloo-timers = { version = "0.2", features = ["futures"], optional = true }
gloo-utils = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
yew = { version = "0.19", optional = true }
yew-hooks = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
	"DataTransfer",
	"DomTokenList",
	"RequestInit",
]
optional = true