[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Used for global common SCSS
[build-dependencies]
grass = "0.11"

[dependencies]
common = { path = "../.." }

wasm-bindgen = "0.2"
wasm-logger = "0.2"

yew = "0.19"
yew-router = "0.16"
yew-hooks = "0.1"
