[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Used for global common SCSS
[build-dependencies]
grass = "0.11"

[dependencies]
common = { path = "../..", features = ["frontend"] }

gloo-utils = "0.1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"

yew = "0.20"
yew-router = "0.17"
yew-hooks = "0.2"

[dependencies.web-sys]
version = "0.3"